added HTML and CSS code for HERO section for main title part of page

--- a/styles.css
+++ b/styles.css
@@ -62,3 +62,35 @@ nav {
     color:black;
     text-decoration: underline;
   }
+
+
+/* HERO SECTION */
+/* sizing of h2 title with 15px margin at the bottom */
+h2 {
+    font-size: 50px;
+    margin-bottom: 15px;
+  }
+ 
+/* background image with text over the top on the left hand side in the middle of screen */
+.heroSection {
+    background-image: url(./images/pawel-czerwinski-dgJT71cXlC4-unsplash.jpg);
+    background-size: cover;
+    padding: 0 60px;
+    color: black;
+}
+  
+  .heroWrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 820px;
+  }
+  
+  .columnLeft {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+  }
+
+
+/* ABOUT SECTION */
