--- a/Assests/CSS/styles.css
+++ b/Assests/CSS/styles.css
@@ -1,96 +1,109 @@
-/* Universal selector */
+/* universal selector */
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color:black
 }
 
-/* background color of webpage */
 body {
-    background-color: #fbeee6;
+  background-color: white;
 }
 
 
-/* HEADER SECTION */
-/* color of header same as webpage background with minor padding and fixed position */
+  
+
+/* color of header is same as background with very minor padding */
 header {
-    background-color: #fbeee6;
-    width: 100%;
-    padding: 15px 0px;
-    position: fixed;
-    top: 0;
+  background-color: white;
+  width: 100%;
+  padding: 15px 0;
+  position: fixed;
+  top: 0;
 }
 
-/* title in header */
-/* header properties */
+/* main title properties */
 h1 {
-    display:inline-block;
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: black;
-    margin-left: 15px;
-    padding-top: 10px;
+  display:inline-block;
+  font-size: 15px;
+  color: black;
+  margin-left: 15px;
+  padding-top: 10px;
+}
+  
+nav {
+  float: right;
+  font-size: 15px;
+  padding-top: 5px;
+  margin-right: 5px;
+  margin-top: 5px;
+}
+  
+ul {
+  list-style-type: none;
+}
+  
+nav ul li {
+  display: inline-block;
+  margin-left: 25px;
+  margin-right: 15px;
+}
+  
+a{
+  color: black;
+  text-decoration: none;
+}
+  
+a:hover {
+  color:black;
+  text-decoration: underline;
 }
 
-/* nav webpage links on right hand side */
-/* links will underline when hover over */
-nav {
-    float: right;
-    font-size: 15px;
-    padding-top: 5px;
-    margin-right: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-top: 5px;
-  }
-    
-  ul {
-    list-style-type: none;
-  }
-    
-  nav ul li {
-    display: inline-block;
-    margin-left: 25px;
-    margin-right: 15px;
-  }
-    
-  a{
-    color: black;
-    text-decoration: none;
-  }
-    
-  a:hover {
-    color:black;
-    text-decoration: underline;
-  }
+/* all h2 in webpage are this font with a margin underneath */
+h2 {
+  font-size: 50px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
 
 
 /* HERO SECTION */
-/* sizing of h2 title with 15px margin at the bottom */
-h2 {
-    font-size: 50px;
-    margin-bottom: 15px;
-  }
- 
-/* background image with text over the top on the left hand side in the middle of screen */
 .heroSection {
-    background-image: url(./images/pawel-czerwinski-dgJT71cXlC4-unsplash.jpg);
-    background-size: cover;
-    padding: 0 60px;
-    color: black;
+  background-image: url("./assets/Images/bauhaus1.png");
+  background-size:cover;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 0 60px;
 }
-  
-  .heroWrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 820px;
-  }
-  
-  .columnLeft {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-  }
 
+.heroWrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 820px;
+}
 
-/* ABOUT SECTION */
+ .columnLeft {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.columnLeft h2 {
+    text-align: left;
+}
+
+/* MEDIA QUERIES FOR HERO */
+@media screen and (max-width: 480px) {
+    .heroWrapper {
+        grid-template-rows: 400px;
+    }
+
+    .columnLeft h2 {
+        font-size: 20px;
+    }
+}
+
