--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -252,6 +252,65 @@ h2 {
 }
 
 
+/* CONTACT SECTION */
+.contact {
+  display: flex;
+  align-items: center;
+  margin-top:10px;
+}
+
+.contactBar {
+  background: #d4a59a;
+  height: 80px;
+  width: 70%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.contactBar img {
+  margin-right: 40px;
+}
+
+.contactBar p {
+  margin-right: 40px;
+  font-weight: 700;
+}
+
+.contactBar span {
+  margin-right: 40px;
+}
+
+.contact h2 {
+  margin-left: 70px;
+}
+
+
+/* MEDIA QUERIES FOR CONTACT SECTION */
+
+@media screen and (max-width:480px) {
+  .contact {
+    flex-direction: column;
+  }
+
+  .contactBar p {
+    margin-right: 16px;
+  }
+
+  .contactBar span {
+    font-size: 16px
+  }
+
+  .contact h2 {
+    margin-left: 0;
+    margin-top: 32px;
+    font-size: 25px;
+  }
+}
+
+
+
+
 
 
 
