--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -16,7 +16,7 @@ body {
 
 /* All h2 titles will have the same sizing and 15px margin at the bottom */
 h2 {
-  font-size: 50px;
+  font-size: 40px;
   margin-top: 20px;
   margin-bottom: 20px;
   text-align: center;
@@ -147,7 +147,7 @@ a:hover {
 
 /* h3 font size with a margin between h3 and p */
 .aboutText h3 {
-  font-size: 25px;
+  font-size: 20px;
   margin-bottom: 32px;
   text-align: center;
 }
@@ -156,6 +156,7 @@ a:hover {
 .aboutText p {
   line-height: 200%;
   text-align: center;
+  font-size: 15px;
 }
 
 /* image in center of column */
@@ -189,11 +190,11 @@ a:hover {
 
 @media screen and (max-width: 480px) {
   .aboutContainer h2 {
-    font-size: 25px; 
+    font-size: 20px; 
   }
   
   .aboutText h3 {
-    font-size: 10px;
+    font-size: 15px;
   }
 
   .aboutImg {
@@ -231,7 +232,7 @@ a:hover {
 
 /* h3 font size with a margin between h3 and p */
 .workText h3 {
-  font-size: 25px;
+  font-size: 20px;
   margin-bottom: 32px;
   text-align: center;
 }
@@ -257,6 +258,26 @@ a:hover {
   border-radius: 15px;
 }
 
+.workRow {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+  margin-left: 90px;
+  margin-right: 90px;
+}
+
+/* two columns next to each other */
+.workColumn {
+  flex: 50%;
+  max-width: 50%;
+  padding: 0 4px;
+}
+
+.workColumn img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
 
 
 /* MEDIA QUERIES FOR WORK SECTION */
@@ -274,22 +295,35 @@ a:hover {
   .workImage {
     margin-top: 40px;
   }
+
+  .workColumn {
+    flex: 100%;
+    max-width: 100%;
+
+  }
 }
 
 @media screen and (max-width: 480px) {
   .workContainer h2 {
-    font-size: 25px; 
+    font-size: 20px; 
   }
   
   .workText h3 {
-    font-size: 10px;
+    font-size: 15px;
   }
 
   .mainworkImg {
     width: 200px;
     height: 300px;
   }
+
+  .workColumn {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
+
+
 
 /* -------------------------------- */
 
